Fix responsive Powered by EvocLabs on mobile and checkout pages
- Show Powered by in footer on mobile view
- Add Powered by after phone number verification step
- Add Powered by in payment method selection


# Conflicts:
#	src/components/Footer.css

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -345,5 +345,9 @@
   .brand-video__player {
     max-height: 50vh;
   }
-}
 
+  .footer__powered-by {
+    width: 100%;
+    padding-top: 16px;
+  }
+}
